--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   
 </body>
 
