--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- 
-  <title>Proyecto Pacientes Svelte</title>
-  <!-- <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
-  <!-- <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">  <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+  <title>Proyecto Pacientes Svelte</title>  
 </head>
 
 <body>
